apps/staging/store/planetstore-patch.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: planet-store
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: planet-store
        image: img.hephy.pro/planetstore/web:b16.20220516.141500 # {"$imagepolicy": "planet-store:web"}
